test/files/run/parserNoSuccessMessage.check
[1.2] failure: string matching regex `\d+' expected but `x' found

-x
 ^
[1.1] failure: string matching regex `\d+' expected but `x' found

x
^
[1.3] parsed: (Some(-)~5)
[1.2] parsed: (None~5)
[1.2] error: Number expected!

-x
 ^
[1.1] error: Number expected!

x
^
[1.3] parsed: (Some(-)~5)
[1.2] parsed: (None~5)
